# agentic_ai_x_longevity

./: .example.env  README.eng.md  README.md  check_texts_for_parameters.py  gradio-ui.py  interactive_view_pkl.py  main.py  pyproject.toml
.github/workflows/: gh-pages.yml
notebooks/: research_prototype.ipynb
presentation/: index.html  script.js  styles.css  test.html
results/: dataset-from-legacy-solution.csv
results/final/: US11548878B2.txt.csv  US11620567B2.txt.csv  US11709136B2.txt.csv
results/raw/: US11548878B2.txt  US11620567B2.txt  US11709136B2.txt
schemes/: patent.json
src/: models.py  orchestrator.py  simple_orchestrator.py  utils.py
src/constants/: __init__.py  general.py  processing.py
src/evaluation/: check_bdb_upd.py
src/filtering/: __init__.py  fetch.py
src/filtering/downloaders/: __init__.py  base.py  google.py  uspto.py
src/filtering/fetchers/: __init__.py  base.py  patents_view.py
src/orchestration/: __init__.py  checkpoint.py  flow.py  orchestrator.py  steps.py
src/processing/: __init__.py  llm_models.py  pipeline.py  text_extraction.py  txt_reader.py
